z-index solved

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,7 @@ header {
     position: fixed;
     width: 100%;
     top: 0;
+    z-index: 1030;
     background-color: rgb(44, 82, 139);
 }
 
@@ -13,6 +14,3 @@ header img {
     height: 90px;
     margin-right: 20px;
 }
-
-
-.portfolio-navigation {}
