--- a/src/components/Photo/Photo.css
+++ b/src/components/Photo/Photo.css
@@ -1,3 +1,5 @@
+.image-container {}
+
 .image {
     width: 100%;
     height: 330px;
