--- a/src/components/Photos/Photos.css
+++ b/src/components/Photos/Photos.css
@@ -1,4 +1,4 @@
-.image-container {
+.images-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
